[PAGOPA-1727] chore: Update docker-base-springboot